# AOC-UTILS

./: README.md  pyproject.toml
src/: get_all_data.py
