[tool.poetry]
name = "aoc-utils"
version = "0.1.0"
description = ""
authors = ["Martin Billinger <mbillingr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aocd = "^0.1"
tqdm = "^4.66.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
